token decoding bug fixed